modified post.js comment
